fix(nav): align burger with flex, remove absolute positioning

--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -37,7 +37,6 @@
      font-weight: 200;
      margin: 0;
      font-style: normal;
-     color: #E84849;
    }
 
    .topnav a.projectsMenu {
