--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -2,7 +2,6 @@
     max-width: 1200px;
     margin: 0 auto;
     // border: 1px solid rgb(197, 197, 197);
-    text-align: center;
 
   }
 
