--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -3,12 +3,6 @@
 
   @media screen and (max-width: 515px) {
 
-    .topnav {
-      position: relative;
-      background: #ffffff;
-      padding: 12px 16px;
-    }
-
     .brand {
       text-align: left;
     }
@@ -49,16 +43,17 @@
 
     }
 
-    .topnav a {
-      padding: 6px 0;
-      font-size: 1.1rem;
+    .topnav {
+      display: flex;
+      align-items: center;
+      padding: 10px 20px 10px;
     }
 
-    .topnav a.icon {
-      position: absolute;
-      color: #595959;
-      right: 16px;
-      top: 16px;
+    .icon {
+      margin-left: auto;
+      font-size: 28px;
+      background: none;
+      border: none;
     }
 
     /* HERO SECTION*/
